--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,12 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
-
     /**
      * android support/compatibility libraries.
      */
@@ -37,19 +35,17 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:palette-v7:23.4.0'
-
     /**
      * used to remove java/android boilerplate
      */
     compile 'com.jakewharton:butterknife:7.0.1'
-
     /**
      * used to display gifs and images
      */
     compile 'com.github.bumptech.glide:glide:3.6.1'
-
     /**
      * For Overscroll
      */
     compile 'me.everything:overscroll-decor-android:1.0.2'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
